--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "production": "cd ./frontend && npm run build && cd .. && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +15,7 @@
     "cors": "^2.8.5",
     "iota-payment": "0.0.13",
     "js-sha512": "^0.8.0",
-    "pass": "^0.2.0"
+    "pass": "^0.2.0",
+    "readline": "^1.3.0"
   }
 }
