--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "production": "cd ./frontend && npm run build && cd .. && npm start",
+    "production": "cd ./frontend && npm install && npm run build && cd .. && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +13,7 @@
     "blueimp-md5": "^2.12.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cron": "^1.7.2",
     "iota-payment": "0.0.13",
     "js-sha512": "^0.8.0",
     "pass": "^0.2.0",
