--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.1",
     "core-js": "^2.6.5",
+    "element-ui": "^2.12.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.3.1",
+    "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7",
     "vuex": "^3.1.1"
   },
